website/versioned_docs/version-2018.2.0/sf/extended_properties.md
---
title: Extended properties
id: version-2018.2.0-extended_properties
original_id: extended_properties
---

Extended properties are used to control features of the Thinkwise Platform when the settings for those features have not yet been formalized in the Software Factory model.

The parameters below can be used as extended properties in the Software Factory and Intelligent Application Manager. An asterisk indicates that a parameter is application specific in IAM instead of global. Application specific parameters can also be specified in the global configuration and then applied to all applications.

| Parameter                                           | Description                                                  | Options                                                      |
| --------------------------------------------------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
| AboutBackground                                     |                                                              |                                                              |
| AboutIcon                                           |                                                              |                                                              |
| AboutLogo                                           |                                                              |                                                              |
| AllowChangePassword                                 | Determines if users with RDBMS login are allowed to change their password<br>Note: only available for SQL Server now. | **Yes**<br>No                                                |
| AllowGridGrouping <br> (obsolete)                   | Determines if the GUI should allow the grid rows to be grouped using the columns | Yes<br>**No**                                                |
| AllowMenuFilter<br>(obsolete)                       | Enables a menu filter for every application where this property is set to true | Yes<br>**No**                                                |
| AllowMultipleDefault- <br> Prefilters* (obsolete)   |                                                              |                                                              |
| AllowNullMandCheckbox*                              | Mandatory fields without a default value will be represented as null in the Grid and Form while adding a new row. | **Yes**<br>No                                                |
| AllowWildcards*                                     | Allows the use of wildcards * and ? in search and filter fields, including the combined filter. | Yes<br>**No**                                                |
| AlwaysShowLookupButtons*<br> (obsolete)             |                                                              |                                                              |
| AnalyticsEnabled                                    | Enable or disable Piwik analytics JavaScript                 | **Yes**<br>No                                                |
| AnalyticsWebsiteID                                  | Piwik Website ID                                             | 2                                                            |
| Animations                                          | Animation Quick Bar when expanding groups                     | **Yes**<br>No                                                |
| Application <br> (obsolete)                         | As of 2015-03-27, this parameter is no longer supported.     |                                                              |
| ApplicationIcon                                     |                                                              |                                                              |
| ApplyConditionalLayout*                             | Determines on which controls conditional layout is applied   | None <br> Grid <br> Form <br> GridAndForm <br> **GridAndFormEdit** |
| AutoLimitColumnSelection*                           | Activates still experimental feature to limit the select clause in SQL queries to those columns that are in use by visible components on the screen. Version 2018.1 and higher | Yes<br>**No**                                                |
| BreadcrumbInPrintPreview*                           |                                                              | Yes<br>No                                                    |
| BringGUIToFront                                     | Whether the GUI should claim focus on startup or stay in background. | Yes<br>**No**                                                |
| CachePath                                           | The path where the GUI stores the Objectmodel cache.         |                                                              |
| CCSID                                               | Sets the CCSID (Code Page) of IBM i DB2 Jobs. When not filled or 0, the default server code page is used. | **37** - legacy default<br>1140 - 37 + euro sign €           |
| ClearReportDataSource*                              | The name of the default datasource to be used on the server where Clear Reports is installed. The datasource needs to be added on the server and can be used if credentials cannot be parsed, for instance when Kerberos is used. |                                                              |
| ClearReportPort*                                    | The port of the server where Clear Reports is installed.     |                                                              |
| ClearReportServer*                                  | The server where Clear Reports is installed.                 |                                                              |
| ClearReportUri*                                     | The path to the server where Clear Reports is installed.     |                                                              |
| ClientType                                          | Deprecated                                                   | pcnc                                                         |
| CombinedFilterDelay*                                | Delays in milliseconds after typing before the grid starts a combined filter search. | **250** (minimum)                                            |
| CombinedFilterEqualTo*                              | Uses an *Equal to* condition in the combined filter query when the default filter condition is *Equal to*. | Yes<br>**No**                                                |
| ConditionalLayout- <br> LookupBehaviour*            | Uses data or translated value for conditional formatting conditions | transl<br>**data**                                           |
| CountNullValues*                                    | Counts null values in grid summaries                          |                                                              |
| CRReportZoom*                                       | Changes the default zoom level crystal reports are opened with | 1 for 100% <br> **2** for 200% etc.                          |
| CustomDateMask*                                     | Specifies a custom date mask used by the GUI to display date values. | See: [standard](https://msdn.microsoft.com/en-us/library/az4se3k1(v=vs.110).aspx), [custom](https://msdn.microsoft.com/en-us/library/8kb3ddd4(v=vs.110).aspx) |
| CustomDateTimeMask*                                 | Specifies a custom datetime mask used by the GUI to display datetime values. | See: [standard](https://msdn.microsoft.com/en-us/library/az4se3k1(v=vs.110).aspx), [custom](https://msdn.microsoft.com/en-us/library/8kb3ddd4(v=vs.110).aspx) |
| CustomTimeMask*                                     | Specifies a custom time mask used by the GUI to display time values. | See: [standard](https://msdn.microsoft.com/en-us/library/az4se3k1(v=vs.110).aspx), [custom](https://msdn.microsoft.com/en-us/library/8kb3ddd4(v=vs.110).aspx) |
| DefaultDir*                                         | The location used by the file chooser when a file has to be selected for the first time. | Path to location                                             |
| DevReportZoom*                                      | Changes the default zoom level devexpressreports are opened with | 1 for 100% <br> **2** for 200% etc.                          |
| DisableFilterOnDetails*                             | Disables the option to filter on details in the Combined Filter. | Yes<br>**No**                                                |
| DisableKeyColumns* <br> (obsolete)                  |                                                              | Yes<br>No                                                    |
| DisableZoomIn                                       | When 'yes', disables zooming in by double clicking on a tab header or grid row. | Yes<br>**No**                                                |
| EmbedImagesInHtml*                                  | Embeds images in the HTML control using Base64 encoding.     | **Yes**<br>No                                                |
| EmptyLayoutsContexts* <br> (obsolete)               | Uses layout and context mechanism for empty sets              | **Yes**<br>No                                                |
| EnableDetail- <br> StartEmptyWithFilter*            |                                                              |                                                              |
| EnablePaging*                                       | Reads out data from the database in pages.                    | **Yes**<br>No                                                |
| EnableRefreshAll- <br> AfterExecute*                |                                                              |                                                              |
| EnterEditorBehavior*                                | Defines the cursor/selection behavior of a cell in the grid when it receives the keyboard focus in edit mode. | **SelectAll** <br> CursorOnEnd                               |
| ExecutionMode*                                      |                                                              |                                                              |
| ExportConditional- <br> Formatting*                 | Export conditional formatting when the file format supports this, for instance, Excel | **Yes**<br>No                                                |
| ExportCopyTo- <br> ClipboardOnly*                   | Only export columns with CopyToClipboard = true by default. The user is able to select additional fields using the advanced export. | **Yes**<br>No                                                |
| ExportFilenameFormat*                               | Sets the default filename (optional extension) for export files. | Use {0} for the plural translation and {1} for the current DateTime, e.g.: {0} - {1:yyyyMMdd}<br>Default: **{0}.xls**<br>See: [string format](https://docs.microsoft.com/en-us/dotnet/api/system.string.format) |
| ExportIDDefault                                     | Sets the initial state for exporting to datavalues instead of displayvalues | Yes<br>No                                                    |
| FocusableFormButtons                                |                                                              |                                                              |
| FocusCombinedFilter- <br> OnStartEmptyWithFilter    |                                                              |                                                              |
| FocusSelectedField*                                 | When opening the filterform, this determines wheter the focus is set to the selectedIndex of the form you came from or to the first editable field. | **Yes**<br>No                                                |
| ForcedFilterForNewRow* <br> (obsolete)              | Filters on the primary key of the inserted row if it cannot be found in the active set of records | Yes<br>**No**                                                |
| FormAlignmentOfNumbers*                             | Alignment of numbers in forms. (Metadata setting only affects grids.) | left<br>**right**                                            |
| GDIObjectLimit                                      | Specifies a limit for the number of GDI objects in use which when exceeded will block new controls from being created. | Any positive integer <br>0 = unlimited <br>Default: **8000** |
| GMapAPIKey                                          |                                                              |                                                              |
| HideDocumentTabHeaders                              | Indicates whether the document tabheaders should be shown. Not needed on a single document application without quickbar. | Yes<br>**No**                                                |
| HideQuickbar* (deprecated) <br> Use QuickbarDisplay | Shows the quickbar in the application                         | Yes<br>**No**                                                |
| IgnoreDiacritics*                                   | Whether the GUI should ignore diacritics when using the combined filter. Note that this setting is only supported for NVARCHAR (DB2: VARGRAPHIC, Oracle: NVARCHAR2) columns. | Yes<br>**No**                                                |
| KeepAddingInGrid                                    | Restores the cursor to the add row after inserting a new record in the grid. This enables continuous adding new rows. | Yes<br>**No**                                   |
| KeepAliveSession                                    | The interval in ms used by the GUI in an open browser(tab) to poll to the web-server to keep the current user session alive. This interval should be less than the Session timeout of IIS. | Default: **5000** (5 minutes)<br>0 = off                     |
| LargeRibbonEditButton                               | Lets the Edit button of the ribbon show up as a large button. | Yes<br>**No**                                                |
| LogoffUrl                                           | URL to go to after logoff                                    |                                                              |
| LogUserActions                                      |                                                              |                                                              |
| LookupDialogModal                                   | If 'no', then the lookup dialog won't block the UI when the source of the lookup dialog is not in edit mode. | **Yes**<br>No                                                |
| LookupsDataDisplay- <br>OneToOne* (obsolete)        | If 'yes', then 'equal to' filters will use the data field instead of the presentation field | Yes<br>**No**                                                |
| MapQuestApiUri*                                     | Licence Uri to be able to use the Maps component.            | Request a key here: [MapQuest Developer](https://developer.mapquest.com/) |
| MaxNoOfRecords*                                     | Maximum number of records to display.                        | 250                                                          |
| MergedMenus                                         |                                                              |                                                              |
| MinPasswordStrength                                 | Minimum password strength when setting or changing passwords.<br>Only supported for 2018.2 or lower. | **0** to 5                                                   |
| MonitorProcess                                      | Forces a memory flush after starting up the GUI and closing a screen to decrease apparent memory usage in the Windows Task Manager. |                                                              |
| MSWordConnVarName*                                  | Connection variable name for Word reports                    | TSFTOWORD_CONN                                               |
| MSWordMacroName*                                    | Macro to run for Word reports                                | /mTSFReport_{0}                                              |
| MSWordSQLVarName*                                   | SQL variable name for Word reports                           | TSFTOWORD_SQL                                                |
| NoApplicationsDE/ENG/NL                             | Custom text of the message shown when the IAM user has no rights to a single GUI Application in German/English/Dutch |                                                              |
| NoAsyncReportPreload                                | Prevents a dummy Crystal Reports report from being preloaded asynchronously so that no SMApiAgent.dll error message is shown. | Yes<br>**No**                                                |
| NoIconsInEditors* <br> (obsolete)                   |                                                              | Yes<br>No                                                    |
| PageSize*                                           | Size of pages shown in the Web GUI grids.                    | 0<br>**25**                                                  |
| PrefilterLookupBehaviour*                           | Uses data or translated value for prefilter conditions        | transl<br>**data**                                           |
| PreviewerToolbarVisible                             | Specifies whether the top toolbar in a previewer component is visible. | Yes<br>**No**                                                |
| PrintPreviewMultipleRows* <br> (obsolete)           | Shows a print preview when executing a report on multiple rows | **Yes**<br>No                                                |
| ProcessFlowContext                                  | Order in which details of the active table are searched      | **TopDown**<br>BreadthFirst<br>ActiveThenSiblings<br>ActiveThenChildren |
| QuickbarDisplay                                     | Determines the initial state of the Quickbar. The option 'opened' will cause the default behavior (visible quickbar), 'closed' will collapse the quickbar but leave it expandable, and 'hidden' will remove the quickbar entirely. | **opened**<br>closed<br>hidden                               |
| RefreshLookupsOn- <br> TabSwitch                    | Refreshes lookup data when switching between detail tab pages. |                                                              |
| RefreshOnTabSwitch                                  | Refreshes data when switching between detail tab pages.        | Yes<br>**No**                                                |
| ReportContentLocale                                 | Influences the display format of dates and decimals within the report without a custom format. | **System** - System language settings are used. For an ASP GUI, this will be the language of the web-server. <br>User - Language of the user is used.<br>English/ENG: American English format is used for everyone e.g., 02/13/2015.<br>Dutch/NL: Dutch format is used for everyone e.g., 13-02-2015.<br>German/DE: German format is used for everyone e.g., 13.02.2015. |
| RibbonDisplay                                       | Determines the initial state of the Ribbon. The option 'opened' will cause the default behavior (visible ribbon) and 'closed' will collapse the ribbon but leave it expandable. | **opened**<br>closed                                         |
| RowNotFoundAction*                                  | Determines the action performed by the GUI when an inserted or updated row cannot be found due to the filters which are active on the subject. | None<br>**ShowInfoMessage** - Shows information with a button which performs the FilterRow behavior<br>FilterRow - attempts to remove active filters and add a filter on the PK of the row |
| Session.[session_variable] *                        | Add session variables. You can use the value of a session variable in your SQL business logic or prefilters using the [SESSION_CONTEXT](https://docs.microsoft.com/en-us/sql/t-sql/functions/session-context-transact-sql) function. |                                                              |
| ShowButtonbarIndicator*                             | Shows or hides extra icon with tooltip on buttonbars to indicate the type of buttonbar, e.g., task, report or prefilter. | Yes<br>**No**                                                |
| showcolumnheadermenu                                |                                                              |                                                              |
| ShowContextColumns*                                 | Shows foreign key fields to parent in child forms             | Yes<br>**No**                                                |
| ShowCopyButton*                                     | Shows or hides the Copy button                                 | **Yes**<br>No                                                |
| ShowMessageNoCurrent- <br> RowInParent*             | Shows the no_current row message for parent rows.            | **Yes**<br>No                                                |
| ShowNavigationButtons*                              | Shows or hides the Navigation buttons underneath the form.     | **Yes**<br>No                                                |
| ShowPrefiltersInTitle*                              | Shows active prefilters in the document title                 | Yes<br>**No**                                                |
| ShowVerticalGridlines*                              | Draws vertical grid lines when grid line color is set         | Yes<br>**No**                                                |
| ShutdownProcedure*                                  | A shutdown procedure for each application when the GUI is closed. | The name of the stored procedure                             |
| SQLStringCase*                                      | Case of the cursor-, col-, ref- and task parameters in stored procedures | upper<br>**lower**                                           |
| SsrsPreferDefault- <br>DisplayMode*                 | When this parameter is specified as true, the Windows GUI is instructed not to open SSRS reports in the print layout mode when previewing. | Yes<br>**No**                                                |
| SsrsReportServer*                                   | Specifies the location of the SSRS Server to use for remote SSRS reports inside an application. |                                                              |
| StartupProcedure*                                   | A startup procedure for each application that is started.    | The name of the stored procedure.                            |
| SupportDevReportOnAzure                             | Enables DevExpress reporting support on Azure.                                                                                                                                                                                                                    | Yes<br>**No**                                                                                                                                                                                                                                                                                                                                   |
| SwitchFileControlBehaviour* (obsolete)              | Deprecated                                                   | Yes<br>**No**                                                |
| Theme*                                              | Non-default theme to load. Useful when developing new themes. | theme id                                                     |
| Translate                                           | Shows translation for all transl_objects                      | **Yes**<br>No                                                |
| UniformTabHeaderAreaColor                           | Overrides default behavior of Windows GUI to auto-derive the tab header background area color by always using the modeled document background color instead. | Yes<br>**No**                                                |
| UsageTimeout                                        | Duration in minutes the user may work in the current session. | Default: 0                                                   |
| UseAllowNavigation- <br> AsRights*                  | Handles "Allow Navigation" of a subject as rights to deny any form of navigation to another row. Default the grid keeps navigating. | Yes<br>**No**                                                |
| UseAlternateRowColor*                               | Toggles alternative row color in the grids of an application. | **Yes**<br>No                                                |
| UseCubeHorizontalScrollbar*                         | Sets the horizontal scrollbar of the cube to scroll over the whole width instead of the cells. | Yes<br>**No**                                                |
| UseCurrentRowBreadcrumb*                            | Shows the current row of the focused table in the breadcrumb bar | Yes<br>**No**                                                |
| UseExportLayouts*                                   | Uses layout concept when exporting, so hidden fields are not exported | **Yes**<br>No                                                |
| UseISOweekgroupintervals                            |                                                              |                                                              |
| UseNolockTableHints* (obsolete)                     | Determines if the GUI should add 'with (nolock)' to select queries. | Yes<br>**No**                                                |
| UserObjectLimit                                     | Specifies a limit for the number of user objects in use, which when exceeded will block new controls from being created. | Any positive integer, or zero if the number of user objects should be ignored. Default: 8000 |
| UseUsrLibl*                                         | Sets connection string LibraryList using [database], *USRLIBL for IBM i DB2 connections | **Yes**<br>No                                                |
| UseWindowsCulture                                   | Uses the region and language settings of the operating system (Windows) for displaying and editing values instead of the settings derived from the application language ID from the meta source. (Dates, times, numbers etc.) | Yes<br>**No**                                                |
| WebGuiURL                                           | Specifies the web gui base url so a deeplink URL can be created in the Windows GUI |                                                              |